# infrastructure

./: .ansible-lint  .gitignore  .gitmodules  .mise.local.template.toml  .mise.toml  .pre-commit-config.yaml  .talismanrc  Pulumi.local.yaml  Pulumi.yaml  README.md  ansible.cfg  configuration.nix  lychee.toml  mise.local.template.toml  mise.toml  pyproject.toml  pytest.ini  requirements.txt  requirements.yml  shell.nix
.mise/tasks/: clean  install
.mise/tasks/minikube/: delete  ip  start  status  stop
.mise/tasks/pip/: install  upgrade
ansible/: eval.merge_variables.yml  play.provision_forgejo_runners.yml  play.provision_nodes.yml  requirements.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: distribute_certificates.yml
ansible/templates/: default.yml.j2  forgejo-config.yml.j2  forgejo-runner.service.j2
docs/: conventional-commit-messages.md  installation.md
grafana_dashboards/: linux_node_overview.json  speedtest_home.json
pulumi/: __main__.py
pulumi/apps/: __init__.py  loki.py  minio_operator.py  minio_tenant.py  prometheus_stack.py  s3ninja.py
pulumi/components/: __init__.py  app.py  helm_release.py  k8s_deployment.py
pulumi/helpers/: __init__.py  string_converter.py  test_string_converter.py
scripts/AcmeDistributor/: main.py
swarm_apps/: grafana.compose.yml  journal.compose.yml  kimai.compose.yml  memos.compose.yml  mumble.compose.yml  nextcloud.compose.yml  silverbullet.compose.yml  teamspeak.compose.yml  trilium.compose.yml
swarm_services/: authentik.compose.yml  grafana.compose.yml  traefik.compose.yml  vault.compose.yml
(+14 files in other folders)
